Change HorecaListActivity to a multi tab HorecaActivity
There is currently 2 tabs:
- Presentation: the description if the horeca has one
- Menu: the list of plat (it could be sorted between entrée plat dessert
in the future.
A third tab for reservation and horaire will be added in the future.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,8 +27,8 @@
             android:label="@string/title_activity_horeca_list" >
         </activity>
         <activity
-            android:name="com.horeca.PlatListActivity"
-            android:label="@string/title_activity_plat_list" >
+            android:name="com.horeca.HorecaActivity"
+            android:label="@string/title_activity_horeca" >
         </activity>
         <activity
             android:name="com.horeca.PlatActivity"
