--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,12 +27,10 @@
             android:label="@string/title_activity_horeca_list" >
         </activity>
         <activity
-            android:name="com.horeca.HorecaActivity"
-            android:label="@string/title_activity_horeca" >
+            android:name="com.horeca.HorecaActivity" >
         </activity>
         <activity
-            android:name="com.horeca.PlatActivity"
-            android:label="@string/title_activity_plat" >
+            android:name="com.horeca.PlatActivity" >
         </activity>
     </application>
 
