Improve signin/signup #1

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,6 +28,10 @@
             </intent-filter>
         </activity>
         <activity
+            android:name="com.horeca.SignInActivity"
+            android:label="@string/title_sign_in" >
+        </activity>
+        <activity
             android:name="com.horeca.HorecaListActivity"
             android:label="@string/title_activity_horeca_list" >
         </activity>
