--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,8 +32,16 @@
             android:label="@string/title_sign_in" >
         </activity>
         <activity
+            android:name="com.horeca.ChangePasswordActivity"
+            android:label="@string/title_changepss" >
+        </activity>
+        <activity
             android:name="com.horeca.SignUpActivity"
             android:label="@string/title_sign_up" >
+        </activity>
+        <activity
+            android:name="com.horeca.ProfileActivity"
+            android:label="@string/title_Profile" >
         </activity>
         <activity
             android:name="com.horeca.HorecaListActivity"
